--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "template-nx-project",
+  "name": "expense-exchange",
   "version": "0.0.0",
   "license": "GPL-3",
   "author": "Denis Zholob",
-  "description": "template_nx_project_description",
-  "repository": "github:deniszholob/template-nx-project",
+  "description": "Tool to keep track of expenses for multiple people",
+  "repository": "github:deniszholob/expense-exchange",
   "private": true,
   "engines": {
     "node": ">= 18.19.1"
@@ -12,15 +12,15 @@
   "scripts": {
     "i": "pnpm install",
     "nx:clear-cache": "nx reset",
-    "start": "nx run template-nx-project:serve --port=4200",
-    "storybook": "nx run template-nx-project:storybook",
-    "storybook:test": "nx run template-nx-project:test-storybook",
-    "storybook:docs": "nx run template-nx-project:serve-storybook --docs",
+    "start": "nx run expense-exchange:serve --port=4200",
+    "storybook": "nx run expense-exchange:storybook",
+    "storybook:test": "nx run expense-exchange:test-storybook",
+    "storybook:docs": "nx run expense-exchange:serve-storybook --docs",
     "storybook:doctor": "npx storybook doctor --config-dir .storybook",
     "start:prod": "pnpm run build && http-server -g -p 5555 --cors -c-1 dist/browser -o",
     "check-circ-deps": "madge ./src -c --extensions ts",
     "dep-graph": "nx dep-graph",
-    "inferred-tasks": "nx show project template-nx-project --web ",
+    "inferred-tasks": "nx show project expense-exchange --web ",
     "lint:check": "nx lint",
     "lint:fix": "nx lint --fix",
     "lint:err": "nx lint --quiet",
@@ -33,12 +33,12 @@
     "affected": "nx affected",
     "test": "nx test --codeCoverage",
     "test:view-coverage": "node -e \"require('child_process').exec(process.platform === 'win32' ? 'start' : process.platform === 'darwin' ? 'open' : 'xdg-open' + ' coverage/index.html')\"",
-    "e2e:open": "nx e2e template-nx-project-e2e --port 8080 --watch=true",
-    "e2e:ci": "nx e2e template-nx-project-e2e --env.grepTags='' --browser chrome",
+    "e2e:open": "nx e2e expense-exchange-e2e --port 8080 --watch=true",
+    "e2e:ci": "nx e2e expense-exchange-e2e --env.grepTags='' --browser chrome",
     "e2e:integration": "nx e2e --env.grepTags='@integration' --browser chrome",
     "patchModifyDate": "node .github/ci/date-patch.js",
     "build": "nx build",
-    "build:gh-prod": "pnpm run patchModifyDate && nx build template-nx-project --base-href='/template-nx-project/'",
+    "build:gh-prod": "pnpm run patchModifyDate && nx build expense-exchange --base-href='/expense-exchange/'",
     "pnpmVersionPatch": "pnpm version patch",
     "upgrade:nx:create": "nx migrate latest",
     "upgrade:npm:i": "pnpm install --no-frozen-lockfile",
@@ -46,7 +46,7 @@
     "upgrade:storybook": "npx storybook@latest upgrade --config-dir ./.storybook",
     "upgrade:storybook-auto": "npx storybook@latest automigrate --config-dir ./.storybook",
     "cypress:ci": "cypress install",
-    "storybook:build": "nx run template-nx-project:build-storybook",
+    "storybook:build": "nx run expense-exchange:build-storybook",
     "storybook:playwright:ci": "pnpx playwright install --with-deps chromium",
     "storybook:test:ci": "pnpx concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"pnpx http-server dist-storybook --port 6006\" \"pnpx wait-on tcp:127.0.0.1:6006 && test-storybook\"",
     "pre-commit": "npx lint-staged",
