--- a/project.json
+++ b/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-nx-project",
+  "name": "expense-exchange",
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "prefix": "app",
@@ -66,10 +66,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "buildTarget": "template-nx-project:build:production"
+          "buildTarget": "expense-exchange:build:production"
         },
         "development": {
-          "buildTarget": "template-nx-project:build:development"
+          "buildTarget": "expense-exchange:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -77,7 +77,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "buildTarget": "template-nx-project:build"
+        "buildTarget": "expense-exchange:build"
       }
     },
     "lint": {
@@ -96,7 +96,7 @@
     "serve-static": {
       "executor": "@nx/web:file-server",
       "options": {
-        "buildTarget": "template-nx-project:build"
+        "buildTarget": "expense-exchange:build"
       }
     },
     "storybook": {
@@ -104,7 +104,7 @@
       "options": {
         "port": 4400,
         "configDir": "./.storybook",
-        "browserTarget": "template-nx-project:build",
+        "browserTarget": "expense-exchange:build",
         "compodoc": false
       },
       "configurations": {
@@ -119,7 +119,7 @@
       "options": {
         "outputDir": "dist-storybook",
         "configDir": "./.storybook",
-        "browserTarget": "template-nx-project:build",
+        "browserTarget": "expense-exchange:build",
         "compodoc": false
       },
       "configurations": {
@@ -137,12 +137,12 @@
     "static-storybook": {
       "executor": "@nx/web:file-server",
       "options": {
-        "buildTarget": "template-nx-project:build-storybook",
+        "buildTarget": "expense-exchange:build-storybook",
         "staticFilePath": "dist-storybook"
       },
       "configurations": {
         "ci": {
-          "buildTarget": "template-nx-project:build-storybook:ci"
+          "buildTarget": "expense-exchange:build-storybook:ci"
         }
       }
     }
