--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nx:clear-cache": "nx reset",
     "start": "nx run expense-exchange:serve --port=4200",
     "storybook": "nx run expense-exchange:storybook",
+    "json-server": "json-server --watch json-server/db.json --port 3000",
     "storybook:test": "nx run expense-exchange:test-storybook",
     "storybook:docs": "nx run expense-exchange:serve-storybook --docs",
     "storybook:doctor": "npx storybook doctor --config-dir .storybook",
@@ -21,13 +22,17 @@
     "check-circ-deps": "madge ./src -c --extensions ts",
     "dep-graph": "nx dep-graph",
     "inferred-tasks": "nx show project expense-exchange --web ",
-    "lint:check": "nx lint",
-    "lint:fix": "nx lint --fix",
-    "lint:err": "nx lint --quiet",
-    "format:check": "nx format:check",
-    "format:fix": "nx format:write",
-    "affected:lint": "nx affected:lint",
+    "lint": "eslint src --fix",
+    "format": "prettier src --write",
+    "nx:lint:check": "nx lint",
+    "nx:lint:fix": "nx lint --fix",
+    "nx:lint:err": "nx lint --quiet",
+    "nx:format:check": "nx format:check",
+    "nx:format:fix": "nx format:write",
+    "affected:lint:check": "nx affected:lint",
     "affected:lint:fix": "nx affected:lint --fix",
+    "affected:format:check": "nx affected -t format:check",
+    "affected:format:fix": "nx affected -t format:write",
     "affected:test": "nx affected:test",
     "affected:dep-graph": "nx affected:dep-graph",
     "affected": "nx affected",
@@ -63,39 +68,40 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "19.1.1",
-    "@angular/common": "19.1.1",
-    "@angular/compiler": "19.1.1",
-    "@angular/core": "19.1.1",
-    "@angular/forms": "19.1.1",
-    "@angular/platform-browser": "19.1.1",
-    "@angular/platform-browser-dynamic": "19.1.1",
-    "@angular/router": "19.1.1",
+    "@angular/animations": "19.1.3",
+    "@angular/common": "19.1.3",
+    "@angular/compiler": "19.1.3",
+    "@angular/core": "19.1.3",
+    "@angular/forms": "19.1.3",
+    "@angular/platform-browser": "19.1.3",
+    "@angular/platform-browser-dynamic": "19.1.3",
+    "@angular/router": "19.1.3",
     "@babel/runtime": "^7.23.9",
-    "@nx/angular": "20.3.2",
+    "@nx/angular": "20.3.3",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.0.5",
-    "@angular-devkit/core": "19.0.5",
-    "@angular-devkit/schematics": "19.0.5",
+    "@angular-devkit/build-angular": "19.1.3",
+    "@angular-devkit/core": "19.1.3",
+    "@angular-devkit/schematics": "19.1.3",
     "@angular-eslint/eslint-plugin": "19.0.2",
     "@angular-eslint/eslint-plugin-template": "19.0.2",
     "@angular-eslint/template-parser": "19.0.2",
-    "@angular/cli": "~19.0.0",
-    "@angular/compiler-cli": "19.1.1",
-    "@angular/language-service": "19.1.1",
-    "@nx/cypress": "20.3.2",
-    "@nx/eslint": "20.3.2",
-    "@nx/eslint-plugin": "20.3.2",
-    "@nx/jest": "20.3.2",
-    "@nx/js": "20.3.2",
-    "@nx/storybook": "20.3.2",
-    "@nx/web": "20.3.2",
-    "@nx/workspace": "20.3.2",
-    "@schematics/angular": "19.1.1",
+    "@angular/cli": "19.1.3",
+    "@angular/compiler-cli": "19.1.3",
+    "@angular/language-service": "19.1.3",
+    "@faker-js/faker": "^9.4.0",
+    "@nx/cypress": "20.3.3",
+    "@nx/eslint": "20.3.3",
+    "@nx/eslint-plugin": "20.3.3",
+    "@nx/jest": "20.3.3",
+    "@nx/js": "20.3.3",
+    "@nx/storybook": "20.3.3",
+    "@nx/web": "20.3.3",
+    "@nx/workspace": "20.3.3",
+    "@schematics/angular": "19.1.3",
     "@storybook/addon-a11y": "8.5.0",
     "@storybook/addon-essentials": "8.5.0",
     "@storybook/addon-interactions": "^8.5.0",
@@ -125,17 +131,18 @@
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-preset-angular": "14.4.2",
+    "json-server": "1.0.0-beta.3",
     "lint-staged": "^15.2.0",
     "madge": "^8.0.0",
     "ng-mocks": "14.13.2",
-    "nx": "20.3.2",
+    "nx": "20.3.3",
     "playwright": "^1.49.1",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-attributes": "^1.0.0",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "storybook": "8.5.0",
     "storybook-addon-angular-router": "^1.10.1",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.6.3"
