--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
             "overrides": { "constructors": "no-public" }
           }
         ],
+        "@angular-eslint/prefer-standalone": "off",
         "@typescript-eslint/no-inferrable-types": "off",
         "max-len": "off",
         "eqeqeq": ["error", "smart"],
@@ -45,6 +46,7 @@
         "simple-import-sort/imports": "error",
         "import/no-cycle": "error",
         "import/no-self-import": "error",
+        "@typescript-eslint/no-non-null-assertion": "error",
         "@typescript-eslint/adjacent-overload-signatures": "off",
         "@typescript-eslint/no-extra-semi": "error",
         "no-extra-semi": "off"
@@ -64,6 +66,14 @@
       "files": ["*.stories.ts"],
       "extends": ["plugin:@nx/angular-template"],
       "rules": {
+        "no-unused-vars": "off",
+        "unused-imports/no-unused-imports": "error",
+        "unused-imports/no-unused-vars": "warn",
+        "simple-import-sort/imports": "error",
+        "import/no-cycle": "error",
+        "import/no-self-import": "error",
+        "@typescript-eslint/no-extra-semi": "error",
+        "no-extra-semi": "off",
         "@angular-eslint/directive-selector": [
           "error",
           {
