--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
   "angular-files-generator.customTemplateFolder": ".vscode/ngfg-templates",
   "angular-files-generator.useOnlyCustomTemplates": false,
-  "angular-files-generator.generateSpec": 1,
+  "angular-files-generator.generateSpec": 0,
   "angular-files-generator.generateStories": 3,
+  "angular-files-generator.generateMock": true,
   "editor.bracketPairColorization.enabled": true,
   "editor.codeActionsOnSave": { "source.fixAll.eslint": "always" },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
