--- a/project.json
+++ b/project.json
@@ -64,6 +64,9 @@
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
+      "options": {
+        "hmr": false
+      },
       "configurations": {
         "production": {
           "buildTarget": "expense-exchange:build:production"
